# catchmeifyoucan

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
catchmeifyoucan/: __init__.py  dataset.py  features.py  plots.py
catchmeifyoucan/modeling/: metrics.py  predict.py  train.py
catchmeifyoucan/modeling/unsupervised/: anomaly.py  deep_detection.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: experiments.ipynb
tests/: test_individual.py
